--- a/app/globals.css
+++ b/app/globals.css
@@ -17,15 +17,37 @@ body {
   animation: rise-animation .4s ease-out;
 }
 
-@keyframes rise-animation {
-  0% {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.d1 { --delay: 100ms !important; }
+.d2 { --delay: 200ms !important; }
+.d3 { --delay: 300ms !important; }
+.d4 { --delay: 400ms !important; }
+.d5 { --delay: 500ms !important; }
+.d6 { --delay: 600ms !important; }
+.d7 { --delay: 700ms !important; }
+.d8 { --delay: 800ms !important; }
+.d9 { --delay: 900ms !important; }
+.d10 { --delay: 1s !important; }
+
+.rise {
+    --delay: 0s;
+    animation: befor-rise var(--delay), rise .5s var(--delay);
+}
+
+@keyframes befor-rise {
+    0%, 100% {
+        transform: translateY(10px);
+        opacity: 0;
+    }
+}
+@keyframes rise {
+    0% {
+        transform: translateY(10px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 100%;
+    }
 }
 
 @layer utilities {
